# algorithms-stepik

Calculator2/: CMakeLists.txt
Desktop/algorithm_course_stepik/search_algo/: a  goods  main  min_time_for_copy.cpp  run
Desktop/algorithm_course_stepik/search_algo/run.dSYM/Contents/Resources/DWARF/: run
calculator/: CMakeLists.txt  calculator.cpp
search_algo/: .vim_plugins.swp  CMakeLists.txt  README.md  a  binary_search_by_answer  min_time_for_copy.cpp  run  test.cpp
search_algo/run.dSYM/Contents/Resources/DWARF/: run
test/: CMakeLists.txt
